--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,6 @@
-.App {
+/*App.js */
+/*App.js */
+.chat-page {
   display: grid;
   grid-template-areas: 
   
@@ -9,8 +11,8 @@
   grid-template-rows: 95vh auto;
   gap: 0 10px;
   background-color: #efefef ;
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw;*/
+  height: 98vh; 
 }
 
 .group-chat {
@@ -18,6 +20,8 @@
   padding: 5px;
   border-radius: 5px;
   border:solid #ced4da;
+
+  
 }
 
 .panel-chat {
@@ -25,6 +29,15 @@
   padding: 5px;
   border-radius: 5px;
   border:solid #ced4da;
+}
+
+
+/*form*/
+/*form*/
+.form-control {
+  border-radius: 5px;
+  border: 1px solid #ced4da;
+  margin: 0 auto;
 }
 
 .btn {
@@ -36,14 +49,52 @@
   border-radius: 5px;
 }
 
-.form-control {
-  border-radius: 5px;
-  border: 1px solid #ced4da;
-  margin: 0 auto;
-}
-
+/*panel*/
+/*panel*/
 .panel-box {
   background-color: #efefef;
   padding: 5px;
   margin: 5px 10px;
+}
+
+
+/*home*/
+
+.signin-container {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(63, 73, 204);
+}
+.signin-form {
+  width: 400px;
+  margin: 0 auto 0 auto;
+  padding: 32px;
+  background: lightblue;
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 28px;
+}
+.signin-input {
+  width: 100%;
+  padding: 12px;
+  border-radius: 6px;
+  border: 1px solid rgb(63, 73, 204);
+  font-size: 0.9rem;
+}
+.options {
+  margin-top: 20px;
+}
+
+/*panel*/
+
+.profile-img {
+  width: 50px;
+  height: 50px;
+  border-radius: 10%;
+  vertical-align: middle;
 }
