--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,35 +1,93 @@
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body,
+button,
+input {
+  font-family: "Josefin Sans", sans-serif;
+}
+
+body {
+  max-height: 100vh;
+  max-width: 100vw;
+  background-color: rgb(255, 255, 255);
+}
+
+.home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #003049;
+  
+}
+
+span {
+  color: #ddd;
+}
+
+h2 {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 600;
+}
+.register-title {
+  padding: 10px;
+  margin: 0 0 40px 0;
+  text-align: center;
+  color: white;
+  background-color: #003049;
+}
+
+.signin-btn {
+  background-color: #0077b6;
+  color: #ddd;
+  padding: 5px;
+  border-radius: 5px;
+  border: none;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 600;
+  font-size: 0.8rem;
+  cursor: pointer;
+  box-shadow: 1px 2px 2px grey;
+}
+
 /*App.js */
 /*App.js */
 .chat-page {
   display: grid;
+  grid-gap: 10px;
   grid-template-areas: 
-  
-  "group-chat   panel-chat panel-chat"
-  "group-chat   panel-chat panel-chat"
-  "group-chat   panel-chat panel-chat";
+  "group-chat   msg-box"
+  "group-chat   msg-box"
+  "group-chat   chat-footer";
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: 95vh auto;
-  gap: 0 10px;
+  /* grid-template-rows: 95vh auto; */
   background-color: #efefef ;
-  /* width: 100vw;*/
-  height: 98vh; 
+  height: 98vh;   
 }
 
 .group-chat {
   background-color: #fff;
-  padding: 5px;
   border-radius: 5px;
   border:solid #ced4da;
-
+  grid-area: group-chat;
   
 }
 
-.panel-chat {
-  background-color: #fff;
-  padding: 5px;
-  border-radius: 5px;
-  border:solid #ced4da;
+.msg-box {
+  grid-area: msg-box;
 }
+
+.chat-footer {
+  grid-area: chat-footer;
+}
+
 
 
 /*form*/
@@ -49,6 +107,19 @@
   border-radius: 5px;
 }
 
+.text-form {
+  display: block;
+  justify-content: center;
+}
+
+.form-btn {
+  border: 1px solid #efefef;
+  background-color: #fff;
+  display: flex;
+  justify-content:flex-end;
+  align-items: center;
+}
+
 /*panel*/
 /*panel*/
 .panel-box {
@@ -56,6 +127,7 @@
   padding: 5px;
   margin: 5px 10px;
 }
+
 
 
 /*home*/
@@ -91,10 +163,110 @@
 }
 
 /*panel*/
+.form-box {
+  padding: 10px;
+  background-color: #ced4da;
+}
 
 .profile-img {
   width: 50px;
   height: 50px;
   border-radius: 10%;
   vertical-align: middle;
+}
+
+/*group */
+/*group */
+#conversation-list {
+  grid-area: conversation-list;
+  background-color: #023e8a;
+  overflow: scroll;
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  max-height: 45%;
+  overflow: hidden;
+}
+
+.conversation {
+  display: grid;
+  grid-template-columns: 40px 1fr max-content;
+  grid-gap: 10px;
+  color: #fff;
+  font-size: 1.0rem;
+  padding: 20px 20px 20px 15px;
+  border-bottom: 1px solid #03045e;
+}
+
+.conversation:active,
+.conversation:hover {
+  background-color: #03045e;
+}
+
+.conversation:hover {
+  cursor: pointer;
+}
+
+.conversation > img {
+  grid-row: span 2;
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+}
+
+.title-text {
+  font-weight: bold;
+  color: #eee;
+  padding-left: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.created-date {
+  color: #ddd;
+  white-space: nowrap;
+  font-size: 1rem;
+}
+
+.conversation-message {
+  grid-column: span 2;
+  padding-left:  5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/*search bar <= group */
+.search-bar {
+  display: flex;
+  align-items: center;
+  border-bottom: 3px solid #ddd;
+}
+.search-bar-input {
+  font-size: 1.2em;
+  padding: 5px;
+  border-radius: 100px;
+  border: 1px solid #002c88;
+  background-color: #61a5c2;
+  color: #ddd;
+  width: 100%;
+  outline: none;
+}
+
+.search-btn {
+  font-size: 1.9em;
+  padding: 5px;
+  color: #0077b6;
+}
+
+.search-btn:hover{
+  cursor: pointer;
+  color: #03045e;
+}
+
+.search-btn:hover,
+.search-btn:active{
+  cursor: pointer;
+  color: #03045e;
 }
