--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,15 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600");
-
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600");
-
-/* .app {
-  min-height: 100vh;
-  display: flex;
-  background-image: url('/');
-  background-size: cover;
-  background-position: center;
-} */
-
 * {
   margin: 0;
   padding: 0;
@@ -28,280 +18,114 @@ body {
   background-color: rgb(255, 255, 255);
 }
 
-.home {
+.form-container {
+  height: 100vh;
+  width: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  background-color: #003049;
-  
+  background-color: #2a9d8f;
 }
 
-#span {
-  text-decoration: none;
+.form {
+  max-width: 430px;
+  width: 100%;
+  padding: 30px;
+  border-radius: 6px;
+  background: #fff;
 }
 
-h2 {
-  font-family: "Josefin Sans", sans-serif;
+header {
+  font-size: 28px;
   font-weight: 600;
-}
-.register-title {
-  padding: 10px;
-  margin: 0 0 40px 0;
+  color: #232836;
   text-align: center;
-  color: white;
-  background-color: #003049;
 }
 
-.signin-btn {
-  background-color: #0077b6;
-  color: #ddd;
-  padding: 5px;
-  border-radius: 5px;
-  border: none;
-  font-family: "Josefin Sans", sans-serif;
-  font-weight: 600;
-  font-size: 0.8rem;
-  cursor: pointer;
-  box-shadow: 1px 2px 2px grey;
+form {
+  margin-top: 30px;
 }
 
-/*App.js */
-/*App.js */
-.chat-page {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-areas: 
-  "group-chat   msg-box"
-  "group-chat   msg-box"
-  "group-chat   chat-footer";
-  grid-template-columns: 1fr 3fr;
-  /* grid-template-rows: 95vh auto; */
-  background-color: #efefef ;
-  height: 98vh;   
-}
-
-.group-chat {
-  background-color: #fff;
-  border-radius: 5px;
-  border:solid #ced4da;
-  grid-area: group-chat;
-  
-}
-
-.msg-box {
-  grid-area: msg-box;
-}
-
-.chat-footer {
-  grid-area: chat-footer;
-}
-
-
-
-/*form*/
-/*form*/
-.form-control {
-  border-radius: 5px;
-  border: 1px solid #ced4da;
-  margin: 0 auto;
-}
-
-.btn {
-  border: none;
-  background-color: teal;
-  width: 100px;
-  padding: 10px;
-  color: #fff;
-  border-radius: 5px;
-}
-
-.text-form {
-  display: block;
-  justify-content: center;
-}
-
-.form-btn {
-  border: 1px solid #efefef;
-  background-color: #fff;
-  display: flex;
-  justify-content:flex-end;
-  align-items: center;
-}
-
-/*panel*/
-/*panel*/
-.panel-box {
-  background-color: #efefef;
-  padding: 5px;
-  margin: 5px 10px;
-}
-
-
-
-/*home*/
-
-.signin-container {
-  height: 100vh;
+.form .field {
+  position: relative;
+  height: 50px;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: rgb(63, 73, 204);
-}
-.signin-form {
-  width: 400px;
-  margin: 0 auto 0 auto;
-  padding: 32px;
-  background: lightblue;
-  border-radius: 6px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 28px;
-}
-.signin-input {
-  width: 100%;
-  padding: 12px;
-  border-radius: 6px;
-  border: 1px solid rgb(63, 73, 204);
-  font-size: 0.9rem;
-}
-.options {
   margin-top: 20px;
 }
 
-/*panel*/
-.form-box {
-  padding: 10px;
-  background-color: #ced4da;
+#label {
+  font-size: 14px;
+  font-weight: 600;
+  color: #3c3c3c;
+  margin: 10px;
 }
 
-.profile-img {
-  width: 50px;
-  height: 50px;
-  border-radius: 10%;
-  vertical-align: middle;
-}
-
-/*group */
-/*group */
-#conversation-list {
-  grid-area: conversation-list;
-  background-color: #023e8a;
-  overflow: scroll;
-  display: inline-block;
+.field input,
+.field button {
   height: 100%;
   width: 100%;
-  max-height: 45%;
-  overflow: hidden;
+  border: none;
+  font-size: 16px;
+  font-weight: 400;
+  border-radius: 6px;
 }
 
-.conversation {
-  display: grid;
-  grid-template-columns: 40px 1fr max-content;
-  grid-gap: 10px;
-  color: #fff;
-  font-size: 1.0rem;
-  padding: 20px 20px 20px 15px;
-  border-bottom: 1px solid #03045e;
-}
-
-.conversation:active,
-.conversation:hover {
-  background-color: #03045e;
-}
-
-.conversation:hover {
-  cursor: pointer;
-}
-
-.conversation > img {
-  grid-row: span 2;
-  height: 40px;
-  width: 40px;
-  border-radius: 100%;
-}
-
-.title-text {
-  font-weight: bold;
-  color: #eee;
-  padding-left: 5px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.created-date {
-  color: #ddd;
-  white-space: nowrap;
-  font-size: 1rem;
-}
-
-.conversation-message {
-  grid-column: span 2;
-  padding-left:  5px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-/*search bar <= group */
-.search-bar {
-  display: flex;
-  align-items: center;
-  border-bottom: 3px solid #ddd;
-}
-.search-bar-input {
-  font-size: 1.2em;
-  padding: 5px;
-  border-radius: 100px;
-  border: 1px solid #002c88;
-  background-color: #61a5c2;
-  color: #ddd;
-  width: 100%;
+.field input {
+  /* font-size: 16px; */
+  padding: 0 15px;
+  border: 1px solid #cacaca;
   outline: none;
 }
 
-.search-btn {
-  font-size: 1.9em;
-  padding: 5px;
-  color: #0077b6;
+.field input:focus {
+  border-bottom-width: 2px;
 }
 
-.search-btn:hover{
-  cursor: pointer;
-  color: #03045e;
+.form-link {
+  text-align: center;
+  margin-top: 10px;
 }
 
-.search-btn:hover,
-.search-btn:active{
-  cursor: pointer;
-  color: #03045e;
+.form-link span {
+  font-size: 12px;
+  font-weight: 400;
 }
 
-.Signup-profile-pic-container {
-  width: 100px;
-  height: 100px;
-  margin: 0 auto;
-  position: relative;
-}
-
-.signup-profile-pic{
-  width: 100px;
-  border-radius: 50%;
-  border: 2px solid gray;
-  object-fit: cover;
-  height: 100px;
-}
-
-.add-pic-icon {
-  position:absolute;
-  bottom: 0;
+.eye-icon {
+  font-size:  18px;
+  position: absolute;
+  top: 50%;
   right: 10px;
-  color: green;
-  background-color: white;
+  transform: translateY(-50%);
+  color: grey;
   cursor: pointer;
-  z-index: 99;
+  padding: 5px;
+}  
+
+.field button {
+  color: #fff;
+  background-color: #0171d3;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.field button:hover {
+  background-color: #016dcb;
+  cursor: pointer;
+}
+
+.input-field {
+  padding: 3px;
+}
+
+.pic-btn {
+  color: #fff;
+  background-color: #0171d3;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  border: none;
+  height: 100%;
+  width: 100%;
+  padding: 6px;
+  border-radius: 6px;
 }
